<resources>
    <string name="app_name">Erdenee</string>
    <string name="result">0</string>
    <string name="AC">AC</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="clear">AC</string>
    <string name="plus">+</string>
    <string name="minus">-</string>"
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="percent">%</string>
    <string name="mod">mod</string>
    <string name="pi">π</string>
</resources>