<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@color/black"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:maxLength="17"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/one"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/two"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/three"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/four"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button70"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/six" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/nine" />

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/six" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:textSize="24sp"
            android:text="@string/eight" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/multiply"
            android:textSize="24sp" />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/plus"
            android:textSize="24sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/minus"
            android:textSize="24sp" />

        <Button
            android:id="@+id/divide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/divide"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/divide"
            android:textSize="24sp" />

        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/percent"
            android:textSize="24sp" />

        <Button
            android:id="@+id/mod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/mod"
            android:textSize="24sp" />

        <Button
            android:id="@+id/pi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/pi"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_rounded"
            android:text="@string/equal"
            android:textSize="40sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>